--- a/packages/web-scripts/package.json
+++ b/packages/web-scripts/package.json
@@ -39,6 +39,7 @@
     "@spotify/tsconfig": "^1.1.4",
     "@types/cross-spawn": "^6.0.0",
     "@types/debug": "^4.1.2",
+    "@types/glob": "^7.1.1",
     "@types/jest": "^24.0.11",
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
@@ -53,6 +54,7 @@
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
+    "glob": "^7.1.4",
     "jest": "^24.5.0",
     "jest-junit": "^6.3.0",
     "lint-staged": "^8.1.5",
